Working board. Need to add clear function

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         <option value="send">Send</option>
         <option value="stream">Stream</option>
     </select>
+    <input type="color" name="color" id="color">
     <script src="main.js"></script>
 </body>
 </html>
