--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         <option value="stream">Stream</option>
     </select>
     <input type="color" name="color" id="color">
+    <button onclick="clearScreen()">Clear</button>
     <script src="main.js"></script>
 </body>
 </html>
