--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <script src="setup.js"></script>
 </head>
 <body>
-    <canvas id="board" width="1000" height="500"></canvas>
+    <canvas id="board" width="1000" height="500" style="border: 1px solid black;"></canvas>
     <select name="mode" id="mode" onchange="changeMode()">
         <option value="send">Send</option>
         <option value="stream">Stream</option>
