Added brushWidth and some other functions. One gets the state of the newest data when you select "Stream", this doesn't load the whole board though!

--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
         <option value="stream">Stream</option>
     </select>
     <input type="color" name="color" id="color">
-    <button onclick="clearScreen()">Clear</button>
+    <button id="clearScreen" onclick="clearScreen()">Clear</button>
+    <input type="range" name="brushWidth" id="brushWidth" min="2" max="100" step="2" value="10">
     <script src="main.js"></script>
 </body>
 </html>
