--- a/index.html
+++ b/index.html
@@ -8,13 +8,10 @@
 </head>
 <body>
     <canvas id="board" width="1000" height="500" style="border: 1px solid black; position: relative; left: -4px; top: -4px;"></canvas>
-    <select name="mode" id="mode" onchange="changeMode()">
-        <option value="send">Send</option>
-        <option value="stream">Stream</option>
-    </select>
     <input type="color" name="color" id="color">
     <button id="clearScreen" onclick="clearScreen()">Clear</button>
     <input type="range" name="brushWidth" id="brushWidth" min="2" max="100" step="2" value="10">
     <script src="main.js"></script>
+    <button onclick="supabaseClient.auth.signOut();location.href='./login'">Log Out</button>
 </body>
 </html>
