Added save button

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         <option value="brush">Brush</option>
         <option value="erase">Erase</option>
     </select>
+    <button id="save" onclick="save()">Save</button>
     <script src="main.js"></script>
     <button onclick="supabaseClient.auth.signOut();location.href='./login'">Log Out</button>
 </body>
