--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <br>
     <button id="clearScreen" onclick="clearScreen()">Clear</button>
     <br>
-    <label for="brushWidth">Brush Width:</label>
+    <label for="brushWidth" id="brushWidthLabel">Brush Width:</label>
     <input type="range" name="brushWidth" id="brushWidth" min="2" max="100" step="2" value="10">
     <br>
     <select name="brushMode" id="brushMode" onchange="brushMode=this.value">
